[gd_scene load_steps=41 format=3 uid="uid://bfucj5sfnkp71"]

[ext_resource type="Script" uid="uid://cf0jdjwtlhpk1" path="res://entities/player/main_character.gd" id="1_4i0p0"]
[ext_resource type="Texture2D" uid="uid://dcj7eql2lrjg7" path="res://assets/character/Idle_(32 x 32).png" id="3_2auch"]
[ext_resource type="Texture2D" uid="uid://c5qa3s22t50ec" path="res://assets/character/Falling_(32 x 32).png" id="3_hgruf"]
[ext_resource type="Texture2D" uid="uid://bov53pyenr385" path="res://assets/character/Jumping_(32 x 32).png" id="4_2auch"]
[ext_resource type="Texture2D" uid="uid://dfej0wfuldjqy" path="res://assets/character/Running_(32 x 32).png" id="5_6we64"]
[ext_resource type="Texture2D" uid="uid://d2drvte4w0m41" path="res://assets/character/Ground_Recovery_(32 x 32).png" id="5_nsneq"]
[ext_resource type="Script" path="res://entities/player/dash_timer.gd" id="6_2auch"]
[ext_resource type="Script" path="res://entities/player/StateMachine/idle_state.gd" id="8_vs4ir"]
[ext_resource type="Script" path="res://entities/player/StateMachine/falling_state.gd" id="9_y20ix"]
[ext_resource type="Script" path="res://entities/player/StateMachine/jumping_state.gd" id="10_445nj"]
[ext_resource type="Script" path="res://entities/player/StateMachine/land_state.gd" id="11_054ll"]
[ext_resource type="Script" uid="uid://f6567kfrthm0" path="res://entities/player/StateMachine/running_state.gd" id="12_ouwug"]
[ext_resource type="Script" uid="uid://d2hbmhdxwk1si" path="res://entities/player/StateMachine/dashing_state.gd" id="13_y20ix"]
[ext_resource type="Script" uid="uid://g3skrcpir8ko" path="res://entities/player/StateMachine/dash_end_state.gd" id="14_4i0p0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6we64"]
atlas = ExtResource("3_2auch")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsneq"]
atlas = ExtResource("3_2auch")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rgb7"]
atlas = ExtResource("3_2auch")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpkh3"]
atlas = ExtResource("3_2auch")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5eib"]
atlas = ExtResource("3_2auch")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6m7t"]
atlas = ExtResource("3_hgruf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j36vl"]
atlas = ExtResource("3_hgruf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lyg3"]
atlas = ExtResource("4_2auch")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuc0r"]
atlas = ExtResource("5_nsneq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bocio"]
atlas = ExtResource("5_nsneq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rutux"]
atlas = ExtResource("5_nsneq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7um10"]
atlas = ExtResource("5_6we64")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odv8d"]
atlas = ExtResource("5_6we64")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf0nh"]
atlas = ExtResource("5_6we64")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h0hw"]
atlas = ExtResource("5_6we64")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pflgl"]
atlas = ExtResource("5_6we64")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu68g"]
atlas = ExtResource("5_6we64")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kb04s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6we64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsneq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rgb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5eib")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6m7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j36vl")
}],
"loop": true,
"name": &"falling",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lyg3")
}],
"loop": true,
"name": &"jumping",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuc0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bocio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rutux")
}],
"loop": false,
"name": &"land",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7um10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odv8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf0nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h0hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pflgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu68g")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhd22"]
size = Vector2(15, 18)

[sub_resource type="Animation" id="Animation_jka1k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_j3ng8"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_jry5i"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"falling", &"falling"]
}

[sub_resource type="Animation" id="Animation_xtudy"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 3.60498, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jumping"]
}

[sub_resource type="Animation" id="Animation_5xn5g"]
resource_name = "land"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1.68179, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_c0qhj"]
resource_name = "run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"running"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e8bj6"]
_data = {
&"RESET": SubResource("Animation_jka1k"),
&"default": SubResource("Animation_j3ng8"),
&"fall": SubResource("Animation_jry5i"),
&"jump": SubResource("Animation_xtudy"),
&"land": SubResource("Animation_5xn5g"),
&"run": SubResource("Animation_c0qhj")
}

[node name="player" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_4i0p0")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_kb04s")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(0.5, 7)
shape = SubResource("RectangleShape2D_xhd22")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="RightOuter" type="RayCast2D" parent="."]
position = Vector2(-6, 1)
rotation = 3.14159
scale = Vector2(4, 1)
target_position = Vector2(0.166649, 28.3333)

[node name="RightInner" type="RayCast2D" parent="."]
position = Vector2(-0.666667, 0.333334)
rotation = 3.14159
scale = Vector2(2.34667, 1)
target_position = Vector2(0.142015, 28.3333)

[node name="LeftInner" type="RayCast2D" parent="."]
position = Vector2(3.66667, -2.78155e-07)
rotation = 3.14159
scale = Vector2(2.34667, 1)
target_position = Vector2(-2.8491e-05, 27.6667)

[node name="LeftOuter" type="RayCast2D" parent="."]
position = Vector2(8.66667, 2.98023e-07)
rotation = 3.14159
scale = Vector2(4, 1)
target_position = Vector2(-0.28409, 28.3333)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1.90735e-06, 2.33333)
scale = Vector2(0.333333, 0.333333)
zoom = Vector2(1.3, 1.3)
position_smoothing_enabled = true
position_smoothing_speed = 7.0
drag_vertical_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e8bj6")
}

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
script = ExtResource("6_2auch")

[node name="IdleState" type="Node" parent="."]
script = ExtResource("8_vs4ir")

[node name="FallingState" type="Node" parent="."]
script = ExtResource("9_y20ix")

[node name="JumpingState" type="Node" parent="."]
script = ExtResource("10_445nj")

[node name="LandState" type="Node" parent="."]
script = ExtResource("11_054ll")

[node name="RunningState" type="Node" parent="."]
script = ExtResource("12_ouwug")

[node name="DashingState" type="Node" parent="."]
script = ExtResource("13_y20ix")

[node name="DashEndState" type="Node" parent="."]
script = ExtResource("14_4i0p0")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
